Fixed dark mode styling.

--- a/coin-alert/src/app/components/styles.css
+++ b/coin-alert/src/app/components/styles.css
@@ -3,7 +3,6 @@ input[type="radio"] {
 }
 
 label {
-    color: var(--primary-color);
     z-index: 10;
     cursor: pointer;
 }
