--- a/coin-alert/src/app/dashboard/page.module.css
+++ b/coin-alert/src/app/dashboard/page.module.css
@@ -78,7 +78,6 @@
   align-items: center;
   gap: 32px;
   grid-row-start: 2;
-  color: var(--primary-color)
 
 }
 
